--- a/steps/style.css
+++ b/steps/style.css
@@ -29,6 +29,7 @@ body {
     width: 400px;
     position: relative;
     text-align: center;
+    
 }
 
 .pro-container{
@@ -51,6 +52,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: 0.3s ease-in-out;
 }
 
 .pro-line{
@@ -74,6 +76,12 @@ body {
   height: 4px;
   width: 33%;
   background-color: var(--color-dark);
+  transition: 0.3s ease-in-out;
+}
+
+.circle.active{
+  border-color: var(--color-dark);
+  color: var(--color-dark);
 }
 
 button{
